Bumped Java version to 11